[package]
name = "osmx"
description = "Rust port of OSMExpress - a fast database file format for OpenStreetMap"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.19.2"
genawaiter = "0.99.1"
itertools = "0.12.1"
lmdb = "0.8.0"
roaring = "0.10.3"
s2 = "0.0.12"

[build-dependencies]
capnpc = "0.19.0"
