[package]
name = "osmx"
description = "Rust port of OSMExpress - a fast database file format for OpenStreetMap"
version = "0.1.0"
authors = ["Jake Low <hello@jakelow.com>"]
homepage = "https://github.com/jake-low/osmx-rs"
repository = "https://github.com/jake-low/osmx-rs"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
capnp = "0.19.2"
genawaiter = "0.99.1"
itertools = "0.12.1"
lazy_static = "1.4.0"
lmdb-zero = "0.4.4"
roaring = "0.10.3"
s2 = "0.0.12"

[build-dependencies]
capnpc = "0.19.0"

[dev-dependencies]
rayon = "1.9.0"

[workspace]
members = ["bin"]
